Added main notebook structure

--- a/code/Capstone - Financial Time Series Forecasting.ipynb
+++ b/code/Capstone - Financial Time Series Forecasting.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dc8c6e1f",
+   "id": "e1a457ef",
    "metadata": {},
    "source": [
-    "### Financial Time Series Forecasting"
+    "## Financial Time Series Forecasting"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "10165c66",
+   "id": "aaee6276",
    "metadata": {},
    "source": [
     "***"
@@ -18,54 +18,343 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1df98cf",
+   "id": "d009ba58",
    "metadata": {},
    "source": [
-    "#### Index"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f1a3d732",
-   "metadata": {},
-   "source": [
-    "This Jupyter Notebook compares different models for time series forecasting in the finanncial sector.\n",
+    "This Jupyter Notebook compares different models for time series forecasting in the financial sector.<br>\n",
+    "The goal of this exercise is to XXXXX<br>\n",
     "The main stucture of this notebook is as follows:\n",
-    "\n"
+    "\n",
+    "1. **[Service factory](#service_factory)**: Python functions for general data and system manipulation\n",
+    "<br>\n",
+    "\n",
+    "2. **[Data Management](#data_management)**: \n",
+    "\n",
+    "    2.1: Start by *gathering financial time series data*: this could be daily stock prices, currency exchange rates, or other related data. For this project, the data could be found [here](https://www.kaggle.com/datasets/szrlee/stock-time-series-20050101-to-20171231?resource=download).\n",
+    "    \n",
+    "    2.2: *Normalize or standardize the data* to make it suitable for machine learning algorithms: create lag features, moving averages, and other relevant features to aid in prediction<br>\n",
+    "    \n",
+    "    2.3: *Random Forest can be particularly useful for this task*: its importance score can help identify which features are most informative for predicting future values.\n",
+    "<br>\n",
+    "\n",
+    "3. **[Model Selection](model_selection)**:\n",
+    "<br>\n",
+    "\n",
+    "4. **[Hyperparameter Optimization](hyperparameter_optimization)**:\n",
+    "<br>\n",
+    "\n",
+    "5. **[Performance Metrics and Results](performance_metrics_and_results)**:\n",
+    "<br>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4ea810b1",
+   "id": "b94d8066",
    "metadata": {},
    "source": [
-    " [First Bullet Header](#first-bullet)"
+    "### Service Factory <a class=\"anchor\" id=\"service_factory\"></a>"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1aeb2dd5",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c47284d",
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "891f8756",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "8c19ad4a",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7c3c7d40",
+   "id": "1fa5e216",
    "metadata": {},
    "source": [
-    "## First Bullet Header <a class=\"anchor\" id=\"first-bullet\"></a>"
+    "### Data Management <a class=\"anchor\" id=\"data_management\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af3501f3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cf89d17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18ca61b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a598d1c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77b99ab1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f388c1b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8b4962e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc6e8e5a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a36873c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ee0ba47",
+   "metadata": {},
+   "source": [
+    "### Model Selection <a class=\"anchor\" id=\"model_selection\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "863f0aaa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bbac2f3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31e69927",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68f06695",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "664e48db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8383aab6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dd15501",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b515a9f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed45b947",
+   "metadata": {},
+   "source": [
+    "### Hyperparameter Optimization <a class=\"anchor\" id=\"hyperparameter_optimization\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a10f5e69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c52942a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2947ff1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba4382bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b221983b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6409085",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3c43cf1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "620b2ee3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fa55b8a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0b6cea6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0996d85f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8389faaa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa84754f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebbd659f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d428035",
+   "metadata": {},
+   "source": [
+    "### Performance Metrics and Results <a class=\"anchor\" id=\"performance_metrics_and_results\"></a>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "88ce486d",
+   "id": "cada930d",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce6f3b8c",
+   "id": "cd5e50e9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -104,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3cee674",
+   "id": "7a956c15",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -112,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10c4d61d",
+   "id": "f86d29a8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -120,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6576be42",
+   "id": "179893b5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -128,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d9ff5fe",
+   "id": "533abce5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -136,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feb25156",
+   "id": "81f337d7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -144,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c3c32da",
+   "id": "edbf523f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -152,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae243558",
+   "id": "beef491f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -160,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1180379",
+   "id": "d63fd41f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -168,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0254f16",
+   "id": "dc9b2073",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -176,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "222c59a9",
+   "id": "4f2d587b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -184,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "930503ba",
+   "id": "340c8a28",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -192,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc1ab8b4",
+   "id": "ea911031",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -200,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f758e318",
+   "id": "124a4bf1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -208,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a09ef29",
+   "id": "1bfa0d08",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -216,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93670c32",
+   "id": "f561db1d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -224,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c896ff45",
+   "id": "69f6f797",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -232,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d736f25",
+   "id": "108cb381",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -240,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d36d9cc7",
+   "id": "842b5f26",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -248,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c6c0b74",
+   "id": "d6e4de2e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -256,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b9bc361",
+   "id": "c71c06a2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -264,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64dafe56",
+   "id": "0549273d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -272,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f564d71a",
+   "id": "186dca8c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -280,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fec69c5b",
+   "id": "f68a1444",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -288,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c931461",
+   "id": "c478b682",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -296,14 +585,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c448da0f",
+   "id": "17eca7ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e85e38f6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52186838",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e0b3243",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34949025",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "97a84019",
+   "id": "514ffec6",
    "metadata": {},
    "source": [
     "## First Bullet Header <a class=\"anchor\" id=\"first-bullet\"></a>"
