--- a/code/Capstone_Default_Clients.ipynb
+++ b/code/Capstone_Default_Clients.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6bcc8b36",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e1a457ef",
    "metadata": {},
    "source": [
-    "## Financial Time Series Forecasting"
+    "# Credit Default Modelling"
    ]
   },
   {
@@ -28,7 +36,7 @@
     "1. **[Service factory](#service_factory)**: Python functions for general data and system manipulation\n",
     "<br>\n",
     "\n",
-    "2. **[Data Management](#data_management)**: \n",
+    "2. **[Exploratory data analysis](#eda)**: \n",
     "\n",
     "    2.1: Start by *gathering financial time series data*: this could be daily stock prices, currency exchange rates, or other related data. For this project, the data could be found [here](https://www.kaggle.com/datasets/szrlee/stock-time-series-20050101-to-20171231?resource=download).\n",
     "    \n",
@@ -66,7 +74,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "891f8756",
+   "id": "9dbf61d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52bf0c30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "171f1eb1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -76,8 +100,587 @@
    "id": "1fa5e216",
    "metadata": {},
    "source": [
-    "### Data Management <a class=\"anchor\" id=\"data_management\"></a>"
+    "### Exploratory data analysis <a class=\"anchor\" id=\"eda\"></a>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2b9a6421",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1ae353e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "67012286",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Main path for this project is /Users/andrea/Documents/Github/Capstone\n"
+     ]
+    }
+   ],
+   "source": [
+    "os.chdir('..')\n",
+    "print(f'Main path for this project is {os.getcwd()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e13eb891",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the data and perform EDA\n",
+    "\n",
+    "credit_data = pd.read_csv('./data/UCI_Credit_Card.csv')\n",
+    "credit_data = credit_data.rename(columns = {'default.payment.next.month':'default'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8fa4a2b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 30000 entries, 0 to 29999\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   ID         30000 non-null  int64  \n",
+      " 1   LIMIT_BAL  30000 non-null  float64\n",
+      " 2   SEX        30000 non-null  int64  \n",
+      " 3   EDUCATION  30000 non-null  int64  \n",
+      " 4   MARRIAGE   30000 non-null  int64  \n",
+      " 5   AGE        30000 non-null  int64  \n",
+      " 6   PAY_0      30000 non-null  int64  \n",
+      " 7   PAY_2      30000 non-null  int64  \n",
+      " 8   PAY_3      30000 non-null  int64  \n",
+      " 9   PAY_4      30000 non-null  int64  \n",
+      " 10  PAY_5      30000 non-null  int64  \n",
+      " 11  PAY_6      30000 non-null  int64  \n",
+      " 12  BILL_AMT1  30000 non-null  float64\n",
+      " 13  BILL_AMT2  30000 non-null  float64\n",
+      " 14  BILL_AMT3  30000 non-null  float64\n",
+      " 15  BILL_AMT4  30000 non-null  float64\n",
+      " 16  BILL_AMT5  30000 non-null  float64\n",
+      " 17  BILL_AMT6  30000 non-null  float64\n",
+      " 18  PAY_AMT1   30000 non-null  float64\n",
+      " 19  PAY_AMT2   30000 non-null  float64\n",
+      " 20  PAY_AMT3   30000 non-null  float64\n",
+      " 21  PAY_AMT4   30000 non-null  float64\n",
+      " 22  PAY_AMT5   30000 non-null  float64\n",
+      " 23  PAY_AMT6   30000 non-null  float64\n",
+      " 24  default    30000 non-null  int64  \n",
+      "dtypes: float64(13), int64(12)\n",
+      "memory usage: 5.7 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's see the shape and all columns datatypes of all the credit dataset\n",
+    "\n",
+    "credit_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8ff9afda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ID           0\n",
+       "LIMIT_BAL    0\n",
+       "SEX          0\n",
+       "EDUCATION    0\n",
+       "MARRIAGE     0\n",
+       "AGE          0\n",
+       "PAY_0        0\n",
+       "PAY_2        0\n",
+       "PAY_3        0\n",
+       "PAY_4        0\n",
+       "PAY_5        0\n",
+       "PAY_6        0\n",
+       "BILL_AMT1    0\n",
+       "BILL_AMT2    0\n",
+       "BILL_AMT3    0\n",
+       "BILL_AMT4    0\n",
+       "BILL_AMT5    0\n",
+       "BILL_AMT6    0\n",
+       "PAY_AMT1     0\n",
+       "PAY_AMT2     0\n",
+       "PAY_AMT3     0\n",
+       "PAY_AMT4     0\n",
+       "PAY_AMT5     0\n",
+       "PAY_AMT6     0\n",
+       "default      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's see if there are null values...\n",
+    "\n",
+    "credit_data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78d0e52d",
+   "metadata": {},
+   "source": [
+    "We are dealing with a good dataset since **all the values are not NA.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f4a611c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>LIMIT_BAL</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>EDUCATION</th>\n",
+       "      <th>MARRIAGE</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>PAY_0</th>\n",
+       "      <th>PAY_2</th>\n",
+       "      <th>PAY_3</th>\n",
+       "      <th>PAY_4</th>\n",
+       "      <th>...</th>\n",
+       "      <th>BILL_AMT4</th>\n",
+       "      <th>BILL_AMT5</th>\n",
+       "      <th>BILL_AMT6</th>\n",
+       "      <th>PAY_AMT1</th>\n",
+       "      <th>PAY_AMT2</th>\n",
+       "      <th>PAY_AMT3</th>\n",
+       "      <th>PAY_AMT4</th>\n",
+       "      <th>PAY_AMT5</th>\n",
+       "      <th>PAY_AMT6</th>\n",
+       "      <th>default</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>689.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>120000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>26</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3272.0</td>\n",
+       "      <td>3455.0</td>\n",
+       "      <td>3261.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>90000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14331.0</td>\n",
+       "      <td>14948.0</td>\n",
+       "      <td>15549.0</td>\n",
+       "      <td>1518.0</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID  LIMIT_BAL  SEX  EDUCATION  MARRIAGE  AGE  PAY_0  PAY_2  PAY_3  PAY_4  \\\n",
+       "0   1    20000.0    2          2         1   24      2      2     -1     -1   \n",
+       "1   2   120000.0    2          2         2   26     -1      2      0      0   \n",
+       "2   3    90000.0    2          2         2   34      0      0      0      0   \n",
+       "\n",
+       "   ...  BILL_AMT4  BILL_AMT5  BILL_AMT6  PAY_AMT1  PAY_AMT2  PAY_AMT3  \\\n",
+       "0  ...        0.0        0.0        0.0       0.0     689.0       0.0   \n",
+       "1  ...     3272.0     3455.0     3261.0       0.0    1000.0    1000.0   \n",
+       "2  ...    14331.0    14948.0    15549.0    1518.0    1500.0    1000.0   \n",
+       "\n",
+       "   PAY_AMT4  PAY_AMT5  PAY_AMT6  default  \n",
+       "0       0.0       0.0       0.0        1  \n",
+       "1    1000.0       0.0    2000.0        1  \n",
+       "2    1000.0    1000.0    5000.0        0  \n",
+       "\n",
+       "[3 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_data.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31b82d06",
+   "metadata": {},
+   "source": [
+    "We see that all the data is **numeric** so we do not need any **from numeric to categorical** translation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7a825049",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "default\n",
+       "0    0.7788\n",
+       "1    0.2212\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The problem we're are going to solve is imbalanced: let's see how much it is imbalanced\n",
+    "\n",
+    "credit_data['default'].value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "567bb64d",
+   "metadata": {},
+   "source": [
+    "We see that the **77.88% of our data is about good payers while the remaining is about \"defaulters\"**. <br>\n",
+    "Since our dataset has 30,000 observations, if mean we have ca. 6636 bad payers.\n",
+    "\n",
+    "Our data is not that imbalanced as we could have been thinking at the benigging which means, under a business point of view, that the institution that has this dataset has lots of bad payers overall. <br>\n",
+    "\n",
+    "In order to be accurate in out predictions, we are going to leverage the following tecniques to balance this dataset:\n",
+    "\n",
+    "1. [SMOTE](https://learn.microsoft.com/en-us/azure/machine-learning/component-reference/smote?view=azureml-api-2)\n",
+    "2. [Oversampling](https://en.wikipedia.org/wiki/Oversampling)\n",
+    "3. [Undersampling](https://en.wikipedia.org/wiki/Undersampling)\n",
+    "\n",
+    "As follows the code to do so."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "41ae551c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from imblearn.over_sampling import RandomOverSampler, SMOTE\n",
+    "from imblearn.under_sampling import RandomUnderSampler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3c6866e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Split the data into training and testing sets\n",
+    "\n",
+    "X = credit_data.drop('default', axis=1)\n",
+    "y = credit_data['default']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a57855e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2: Apply SMOTE\n",
+    "\n",
+    "smote            = SMOTE(random_state=44)\n",
+    "X_smote, y_smote = smote.fit_resample(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7f66ebc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(37336, 24)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "default\n",
+       "0    18668\n",
+       "1    18668\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Step 3: apply random oversampling\n",
+    "\n",
+    "oversampler                  = RandomOverSampler(random_state=123)\n",
+    "X_oversampled, y_oversampled = oversampler.fit_resample(X_train, y_train)\n",
+    "\n",
+    "print(X_oversampled.shape)\n",
+    "y_oversampled.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d94b5c6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10664, 24)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "default\n",
+       "0    5332\n",
+       "1    5332\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Step 4: apply random undersampling\n",
+    "\n",
+    "undersampler                   = RandomUnderSampler(random_state=123)\n",
+    "X_undersampled, y_undersampled = undersampler.fit_resample(X_train, y_train)\n",
+    "\n",
+    "print(X_undersampled.shape)\n",
+    "y_undersampled.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcb70119",
+   "metadata": {},
+   "source": [
+    "From what we have coded here above we can summarise:\n",
+    "\n",
+    ">- **SMOTE**: we applied the SMOTE technique to generate synthetic samples of the minority class in the training data, helping to balance the class distribution.\n",
+    ">- **Random Oversampling**: we oversampled the minority class by randomly selecting samples with replacement, increasing the number of minority class samples in the training data.\n",
+    ">- **Random Undersampling**: we undersampled the majority class by randomly removing samples, reducing the number of majority class samples in the training data to balance the class distribution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e952c83d",
+   "metadata": {},
+   "source": [
+    "The \"undersampled dataset\" has a the best final ratio since "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d627ba62",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c15980ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb15adb5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e45be131",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3a27ec2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4b11fe8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a5d25d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29d85899",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -353,18 +956,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cada930d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda3\\python.exe\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "print(f'The current Python interpreter is {sys.executable}')"
@@ -372,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "44c80085",
    "metadata": {},
    "outputs": [],
@@ -647,7 +1242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
