--- a/code/Capstone_Default_Clients.ipynb
+++ b/code/Capstone_Default_Clients.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23166e05",
+   "id": "b40e1e88",
    "metadata": {},
    "source": [
     "***"
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e2d3185",
+   "id": "7f567926",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84877a48",
+   "id": "fca26a2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fa9cd53",
+   "id": "680012a7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d073deb1",
+   "id": "f92a4db0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba87f54b",
+   "id": "d683a430",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f82a0e1c",
+   "id": "5af30a02",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83b53263",
+   "id": "6b083c02",
    "metadata": {},
    "source": [
     "We will be keeping on executing out code on the **credit_data_balanced** dataset"
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cb93bac",
+   "id": "841f0ffe",
    "metadata": {},
    "source": [
     "### Random Forest"
@@ -976,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75192fd2",
+   "id": "8c61a2c2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -984,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b8e4c8f",
+   "id": "a1d1e57a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43b4c11b",
+   "id": "667e9f71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21ad60b6",
+   "id": "0bc53ce0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1092,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53495cf8",
+   "id": "bfd7934a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1272a920",
+   "id": "52890ace",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1108,7 +1108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd62be1b",
+   "id": "2ee0621d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1116,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97eaa8b5",
+   "id": "d9a8806c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef8b29b5",
+   "id": "57533106",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1132,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd4cdfe0",
+   "id": "7fe166e3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1140,17 +1140,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8deb08e",
+   "id": "043340e4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 10%|█████████████████████                                                                                                                                                                                             | 2/20 [07:58<1:03:39, 212.21s/trial, best loss: -0.8105]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Support Vector Machine\n",
     "\n",
@@ -1237,7 +1229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92652618",
+   "id": "b7507f89",
    "metadata": {},
    "source": [
     "Explanation:\n",
@@ -1254,7 +1246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2575c5a0",
+   "id": "851ae0e5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1262,7 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cf87ab2",
+   "id": "9aacd31d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1270,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb8e5d1d",
+   "id": "4ffb8c02",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1278,7 +1270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9efbdf3a",
+   "id": "a2222502",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1286,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e1f3f63",
+   "id": "ab423fc2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1294,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df0e64b4",
+   "id": "37fe3a25",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1302,7 +1294,100 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b93ad35",
+   "id": "7cef89dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gradient boosting machines\n",
+    "\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score, roc_curve, roc_auc_score\n",
+    "import matplotlib.pyplot as plt\n",
+    "from hyperopt import fmin, tpe, hp, Trials, STATUS_OK\n",
+    "\n",
+    "# Step 1: Load and preprocess the data\n",
+    "url = \"https://archive.ics.uci.edu/ml/machine-learning-databases/00350/default%20of%20credit%20card%20clients.xls\"\n",
+    "data = pd.read_excel(url, header=1)\n",
+    "data.rename(columns={'default payment next month': 'default'}, inplace=True)\n",
+    "data.drop('ID', axis=1, inplace=True)\n",
+    "\n",
+    "# Step 2: Split the data into training and testing sets\n",
+    "X = data.drop('default', axis=1)\n",
+    "y = data['default']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Step 3: Standardize the data\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "# Step 4: Define the objective function for hyperopt\n",
+    "def objective(params):\n",
+    "    model = GradientBoostingClassifier(**params, random_state=42)\n",
+    "    model.fit(X_train_scaled, y_train)\n",
+    "    y_pred = model.predict(X_test_scaled)\n",
+    "    acc = accuracy_score(y_test, y_pred)\n",
+    "    return {'loss': -acc, 'status': STATUS_OK}\n",
+    "\n",
+    "# Step 5: Define the hyperparameter space\n",
+    "space = {\n",
+    "    'n_estimators': hp.choice('n_estimators', range(50, 301)),\n",
+    "    'max_depth': hp.choice('max_depth', range(1, 21)),\n",
+    "    'min_samples_split': hp.choice('min_samples_split', range(2, 21)),\n",
+    "    'min_samples_leaf': hp.choice('min_samples_leaf', range(1, 21)),\n",
+    "    'learning_rate': hp.loguniform('learning_rate', -7, 0),\n",
+    "    'subsample': hp.uniform('subsample', 0.5, 1.0),\n",
+    "}\n",
+    "\n",
+    "# Step 6: Run hyperopt optimization\n",
+    "trials = Trials()\n",
+    "best = fmin(fn=objective, space=space, algo=tpe.suggest, max_evals=50, trials=trials)\n",
+    "\n",
+    "# Step 7: Train the Gradient Boosting model with the best hyperparameters\n",
+    "best_params = {\n",
+    "    'n_estimators': best['n_estimators'] + 50,\n",
+    "    'max_depth': best['max_depth'] + 1,\n",
+    "    'min_samples_split': best['min_samples_split'] + 2,\n",
+    "    'min_samples_leaf': best['min_samples_leaf'] + 1,\n",
+    "    'learning_rate': best['learning_rate'],\n",
+    "    'subsample': best['subsample'],\n",
+    "}\n",
+    "gb_model = GradientBoostingClassifier(**best_params, random_state=42)\n",
+    "gb_model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Step 8: Evaluate the model on the test set\n",
+    "y_pred = gb_model.predict(X_test_scaled)\n",
+    "y_pred_proba = gb_model.predict_proba(X_test_scaled)[:, 1]\n",
+    "\n",
+    "# Step 9: Display performance metrics\n",
+    "print(\"Best Hyperparameters:\", best_params)\n",
+    "print(\"Accuracy Score:\", accuracy_score(y_test, y_pred))\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(confusion_matrix(y_test, y_pred))\n",
+    "print(\"Classification Report:\")\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "# Step 10: Plot the ROC curve\n",
+    "fpr, tpr, thresholds = roc_curve(y_test, y_pred_proba)\n",
+    "plt.figure()\n",
+    "plt.plot(fpr, tpr, label='Gradient Boosting (area = %0.2f)' % roc_auc_score(y_test, y_pred_proba))\n",
+    "plt.plot([0, 1], [0, 1],'r--')\n",
+    "plt.xlim([0.0, 1.0])\n",
+    "plt.ylim([0.0, 1.05])\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.title('Receiver Operating Characteristic')\n",
+    "plt.legend(loc=\"lower right\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98520ad0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1310,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbe9757a",
+   "id": "78273773",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1318,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b71ca90c",
+   "id": "1c1aed89",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1326,7 +1411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b063d834",
+   "id": "edc6d1a9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1334,7 +1419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d346b06",
+   "id": "add0fd8e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1342,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d407d020",
+   "id": "71eadc08",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1350,7 +1435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af549f2d",
+   "id": "45f5872a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1358,7 +1443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d92bf549",
+   "id": "50d96f7a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1366,7 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd67ed7a",
+   "id": "6a00e84a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1374,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3465308f",
+   "id": "5c2cec57",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1382,7 +1467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd401871",
+   "id": "35d9f645",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1390,7 +1475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "029e83e1",
+   "id": "c16a2328",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1398,7 +1483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3cb3176",
+   "id": "fec4d029",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1406,7 +1491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e3f750b",
+   "id": "86429b9e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1414,7 +1499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99accec8",
+   "id": "28cba460",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1422,7 +1507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ddec5e5",
+   "id": "92d8eccf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1430,7 +1515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cb04962",
+   "id": "84962370",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1438,7 +1523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae2fea72",
+   "id": "3551454b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1446,7 +1531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f57cd19f",
+   "id": "180c137d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1454,7 +1539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a719f957",
+   "id": "6f9c67a2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1462,7 +1547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "091b26bc",
+   "id": "18839e80",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1470,7 +1555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "373fd3d0",
+   "id": "c371041a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1478,7 +1563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24a35a15",
+   "id": "477e5c92",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1486,15 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5728eb1f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0dcb4d7b",
+   "id": "68c9da9d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1604,7 +1681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65bdc4c8",
+   "id": "81378ea0",
    "metadata": {},
    "source": [
     "Explanation:\n",
