--- a/code/Capstone_Default_Clients.ipynb
+++ b/code/Capstone_Default_Clients.ipynb
@@ -605,7 +605,7 @@
    "source": [
     "Fortunately, we do not have a lot of features so we can plot a correlogram like the one here above.\n",
     "\n",
-    "**We notice at least three things out of the correlgram** (that could be use by the analyst to start thinking it's necessary to apply a model):\n",
+    "**We notice at least three things out of the correlgram above** (that could be use by the analyst to start thinking it's necessary to apply a model):\n",
     "\n",
     "1. The \"Pay\" variable have the **strongest linear correlation with the default target label we would like to predict**: basically, it seems that the more a client has not paid the previous month, the more it is likely that he/she is not going to pay the current month. From PAY_6 having correlation equal to 0.19 till PAY_1 having correlation 0.32 the value increases\n",
     "2. *No personal categorical feature (sex, age, education, marriage) has a remarkable impact on the target variable*\n",
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68ca8e09",
+   "id": "4ccffd3b",
    "metadata": {},
    "source": [
     " "
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e74bbd0a",
+   "id": "05385292",
    "metadata": {},
    "source": [
     "As we see here above in the **seaborn pairplot**, there are not particular regression and scatter conditions among the features. We see that there is a strong correlation between feature LIMIT and PAY: the lower the card limit the lower the pay. \n",
