Added small changes to the notebook

--- a/code/Capstone_Default_Clients.ipynb
+++ b/code/Capstone_Default_Clients.ipynb
@@ -2011,7 +2011,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 30%|████████████████████████████████████████████████████████████▎                                                                                                                                            | 3/10 [00:42<01:41, 14.57s/trial, best loss: -0.6913158892681077]"
+      " 60%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▌                                                                                | 6/10 [03:14<02:29, 37.42s/trial, best loss: -0.6913158892681077]"
      ]
     }
    ],
